--- a/configs/Vessel/encoder_only.yaml
+++ b/configs/Vessel/encoder_only.yaml
@@ -36,4 +36,4 @@ max_num_epochs: 125 # used 8 cards as default
 task:  Task008_HepaticVessel
 network: 3d_fullres
 network_trainer: nnUNetTrainerV2_DDP
-hdfs_base: GeTU008_64192192_max2former_ms-432_decl3_d192_bT-d1_mds_mw1.0_bs2x8_adamw_warmup10_lr3e-4_masklossv1_masking_hungarian20_mhsa32_encoderonly_l12_pretrain_ls
+hdfs_base: GeTU008_3DTransUNet_encoder_only
